[package]
name = "amm_client"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "amm_client"
path = "src/main.rs"

[dependencies]
raydium-contract-instructions = { path = "../lib"}
spl-token = { version = "6.0.0", features = ["no-entrypoint"], default-features = false }
spl-associated-token-account = "4.0.0"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
anyhow = "1.0.86"
